<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <TextView
        android:text="@string/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textAmount" />
    <EditText
        android:inputType="phone"
        android:digits="1234567890"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editInputAmount" />
    <TextView
        android:text="@string/numOfPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textNumPax" />
    <EditText
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editInputNumPax" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tbSvs"
            android:layout_weight="1"
            android:textOff="@string/svsDisabled"
            android:textOn="@string/svsEnabled" />
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tbGst"
            android:layout_weight="1"
            android:textOff="@string/gstDisabled"
            android:textOn="@string/gstEnabled" />
    </LinearLayout>

    <TextView
        android:text="@string/discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textDiscount" />

    <EditText
        android:inputType="number"
        android:digits="1234567890"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editInputDiscount" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/radioGroupPayment"
            android:layout_width="159dp"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonCash"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:text="@string/cash" />

        </RadioGroup>

        <RadioButton
            android:id="@+id/radioButtonPayNow"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:text="@string/payNow" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/split"
            android:layout_weight="1"
            android:textOff="@string/splitDisabled"
            android:textOn="@string/splitEnabled" />
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset"
            android:layout_weight="1"
            android:textOff="@string/resetDisabled"
            android:textOn="@string/resetEnabled" />


    </LinearLayout>


    <TextView
        android:id="@+id/textTotalBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/totalBill"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@string/totalBill" />

    <TextView
        android:id="@+id/textEachPays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/totalEachPays"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@string/totalEachPays" />


</LinearLayout>